--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,7 +47,7 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
     implementation 'com.squareup.okhttp3:okhttp:4.9.0'
     implementation ('io.socket:socket.io-client:2.1.0') {
-        // excluding org.json which is provided by Android
         exclude group: 'org.json', module: 'json'
     }
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.2.0"
 }
